--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 
 body{
-    font-family: Lexend;
     margin: 0px;
-    overflow: hidden; 
+    overflow: hidden; /* Hide scrollbars */
     cursor: wait;
-    background-color: #faebd7;
-    @media screen and (max-width: 768px){
-        overflow: visible;
-    }
 }
