--- a/src/components/Preloader/style.module.scss
+++ b/src/components/Preloader/style.module.scss
@@ -12,6 +12,9 @@
         top: 0;
         width: 100%;
         height: calc(100% + 300px);
+        path{
+            fill: #141516;
+        }
     }
     p{
         display: flex;
