--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -1,135 +1,72 @@
-.cardContainer {
-	height: 100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	position: sticky;
-	top: 0px;
+.projects{
+    display: flex;
+    align-items: center;
+    padding-left: 200px;
+    padding-right: 200px;
+    flex-direction: column;
+    margin-top: 300px;
 
-	@media screen and (max-width: 1024px) {
-		margin: auto;
-	}
-	@media screen and (max-width: 768px) {
-		margin: auto;
-	}
-
-	.card {
-		display: flex;
-		flex-direction: column;
-		position: relative;
-		top: -25%;
-		height: 500px;
-		width: 1000px;
-		border-radius: 25px;
-		padding: 50px;
-		transform-origin: top;
-
-		h2 {
-			text-align: center;
-			margin: 0px;
-			font-size: 28px;
-		}
-
-		.body {
-			display: flex;
-			height: 100%;
-			margin-top: 50px;
-			gap: 50px;
-
-			@media screen and (max-width: 768px) {
-				flex-direction: flex;
-				margin-top: 0px;
-				gap: 0px;
-			}
-
-			.description {
-				width: 40%;
-				position: relative;
-				top: 10%;
-
-				@media screen and (max-width: 768px) {
-					width: 100%;
-					top: 0%;
-					position: relative;
-				}
-
-				p {
-					font-size: 16px;
-
-					&::first-letter {
-						font-size: 28px;
-						font-family: Lexend;
-					}
-
-					@media screen and (max-width: 768px) {
-						font-size: 20px;
-
-						&::first-letter {
-							font-size: 24px;
-							font-family: Lexend;
-						}
-					}
-				}
-
-				span {
-					display: flex;
-					align-items: center;
-					gap: 5px;
-
-					a {
-						color: black;
-						font-size: 12px;
-						text-decoration: underline;
-						cursor: pointer;
-					}
-
-					@media screen and (max-width: 768px) {
-						display: flex;
-					}
-				}
-			}
-
-			.imageContainer {
-				position: relative;
-				width: 60%;
-				height: 100%;
-				border-radius: 25px;
-				overflow: hidden;
-
-				@media screen and (max-width: 768px) {
-					display: none;
-				}
-
-				.inner {
-					width: 100%;
-					height: 100%;
-				}
-
-				img {
-					object-fit: cover;
-				}
-			}
-			.videoContainer {
-				position: relative;
-				width: 60%;
-				height: 100%;
-				border-radius: 25px;
-				overflow: hidden;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-
-				video {
-					width: 100%;
-					height: 100%;
-					object-fit: cover;
-					border-radius: 25px;
-				}
-
-				@media screen and (max-width: 768px) {
-					display: none;
-				}
-			}
-		}
-	}
+    .body{
+        max-width: 1400px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 100px;
+    }
+    
+    .modalContainer{
+        height: 350px;
+        width: 400px;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        background-color: white;
+        pointer-events: none;
+        overflow: hidden;
+        z-index: 3;
+    }
+    
+    .modalSlider{
+        height: 100%;
+        width: 100%;
+        position: relative;
+        transition: top 0.5s cubic-bezier(0.76, 0, 0.24, 1);
+    }
+    
+    .modal{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .modal img{
+        height: auto;
+    }
+    
+    .cursor, .cursorLabel{
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        background-color: #455CE9;
+        color: white;
+        position: fixed;
+        z-index:3;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14px;
+        font-weight: 300;
+        pointer-events: none;
+    }
+    
+    .cursorLabel{
+        background-color: transparent;
+    }
+    
+    
 }
+
