--- a/src/components/Header/nav/style.module.scss
+++ b/src/components/Header/nav/style.module.scss
@@ -1,4 +1,5 @@
-.menu{
+.menu {
+    font-family: Lexend;
     height: 100vh;
     background-color: rgb(41, 41, 41);
     position: fixed;
@@ -6,7 +7,8 @@
     top: 0;
     color: white;
     z-index: 3;
-    .body{
+
+    .body {
         box-sizing: border-box;
         height: 100%;
         padding: 100px;
@@ -14,14 +16,14 @@
         flex-direction: column;
         justify-content: space-between;
 
-        .nav{
+        .nav {
             display: flex;
             flex-direction: column;
             font-size: 56px;
             gap: 12px;
             margin-top: 80px;
 
-            .header{
+            .header {
                 color: rgb(153, 153, 153);
                 border-bottom: 1px solid rgb(153, 153, 153);
                 text-transform: uppercase;
@@ -29,12 +31,31 @@
                 margin-bottom: 40px;
             }
 
-            a{
+            a {
                 text-decoration: none;
                 color: white;
                 font-weight: 300;
             }
-            
+
         }
+    }
+}
+
+.menu {
+    @media screen and (max-width: 768px) {
+        width: 100%;
+
+        .body {
+            padding: 50px;
+
+            .nav {
+                font-size: 36px;
+
+                .header {
+                    font-size: 8px;
+                }
+            }
+        }
+
     }
 }
