--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -1,4 +1,5 @@
-.header{
+.header {
+    font-family: Lexend;
     position: absolute;
     display: flex;
     z-index: 1;
@@ -10,69 +11,100 @@
     font-weight: 300;
     box-sizing: border-box;
     align-items: center;
-    
-    .logo{
+
+    .logo {
         display: flex;
         cursor: pointer;
-        p{
+        font-weight: 400;
+
+        p {
             margin: 0px;
             transition: all 0.5s cubic-bezier(0.76, 0, 0.24, 1);
         }
-        .name{
+
+        .name {
             display: flex;
             position: relative;
             overflow: hidden;
             white-space: nowrap;
             margin-left: 5px;
             transition: all 0.5s cubic-bezier(0.76, 0, 0.24, 1);
-            p{
+
+            p {
                 position: relative;
                 transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
-                &:nth-of-type(2){
+
+                &:nth-of-type(2) {
                     padding-left: 0.3em;
                 }
-                &:nth-of-type(3){
+
+                &:nth-of-type(3) {
                     position: absolute;
                     left: 120px;
                     padding-left: 0.3em;
                 }
             }
         }
-        &:hover{
-            .copyright{
+
+        &:hover {
+            .copyright {
                 transform: rotate(360deg);
             }
-            .name{
+
+            .name {
                 padding-right: 30px;
-                .codeBy{
+
+                .RecodeBy {
                     transform: translateX(-100%);
                 }
-                .dennis{
-                    transform: translateX(-65px);
+
+                .rishi {
+                    transform: translateX(-81px);
+                    background: linear-gradient(180deg, #c1ff5d 20%, #ffffff 100%);
+                    color: transparent;
+                    -webkit-background-clip: text;
+                    background-clip: text;
+                    font-weight: 800;
                 }
-                .snellenberg{
-                    transform: translateX(-65px);
+
+                .lahoti {
+                    transform: translateX(-83px);
+                    background: linear-gradient(180deg, #c1ff5d 20%, #ffffff 100%);
+                    color: transparent;
+                    -webkit-background-clip: text;
+                    background-clip: text;
+                    font-weight: 800;
                 }
             }
         }
     }
-    .nav{
+
+    .nav {
         display: flex;
         align-items: center;
 
-        .el{
+        .el {
             display: flex;
             flex-direction: column;
             position: relative;
             z-index: 1;
             padding: 15px;
             cursor: pointer;
-            &:hover{
-                .indicator{
+            font-weight: 400;
+
+            &:hover {
+                background: linear-gradient(180deg, #c1ff5d 30%, #ffffff 80%);
+                color: transparent;
+                background-clip: text;
+                font-weight: 600;
+                transition: color 0.5s ease-in-out;
+
+                .indicator {
                     transform: scale(1);
                 }
             }
-            .indicator{
+
+            .indicator {
                 position: absolute;
                 width: 5px;
                 height: 5px;
@@ -84,18 +116,21 @@
                 transition: transform 0.2s cubic-bezier(0.76, 0, 0.24, 1);
             }
         }
-        a{
+
+        a {
             cursor: pointer;
+            font-size: large;
         }
-    } 
+    }
 }
-.headerButtonContainer{
+
+.headerButtonContainer {
     transform: scale(0);
     position: fixed;
     right: 0px;
     z-index: 4;
 
-    .button{
+    .button {
         position: relative;
         margin: 20px;
         width: 80px;
@@ -107,12 +142,14 @@
         align-items: center;
         justify-content: center;
     }
-    
-    .burger{
+
+    .burger {
         width: 100%;
         position: relative;
         z-index: 1;
-        &::after, &::before{
+
+        &::after,
+        &::before {
             content: "";
             display: block;
             height: 1px;
@@ -122,28 +159,47 @@
             position: relative;
             transition: transform 0.3s;
         }
-    
-        &::after{
+
+        &::after {
             top: -5px;
         }
-    
-        &::before{
+
+        &::before {
             top: 5px;
         }
     }
-    
-    .burgerActive{
-    
-        &::after{
+
+    .burgerActive {
+
+        &::after {
             transform: rotate(45deg);
             top: -1px;
         }
-    
-        &::before{
+
+        &::before {
             transform: rotate(-45deg);
             top: 0px;
         }
-        
+
     }
 }
 
+@media screen and (max-width: 768px) {
+    .nav {
+        padding-top: 15px;
+    }
+
+    .header {
+        flex-direction: column;
+        padding: 10px 20px 20px 20px;
+        align-items: center;
+    }
+
+    .logo {
+        color: black;
+
+        &:hover {
+            padding-left: 60px;
+        }
+    }
+}
